--- a/monitoring-example/prometheus/Dockerfile
+++ b/monitoring-example/prometheus/Dockerfile
@@ -1,5 +1,5 @@
 FROM prom/prometheus:v2.2.1
 
-ADD ./config.yaml /etc/prometheus/config.yaml
+COPY ./config.yaml /etc/prometheus/config.yaml
 
 CMD ["--config.file=/etc/prometheus/config.yaml"]
