fix flake8 not ignoring venv/ folders

--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ addopts = --verbose
 
 # shamelessly copied from pipenv's setup.cfg
 [flake8]
-exclude = .git,__pycache__,monitoring-example/
+exclude = .git,__pycache__,monitoring-example/,venv/
 ignore =
     # The default ignore list:
     E121,E123,E126,E226,E24,E704,
